a bunch of glm stuff

--- a/stats_for_applications/R/index.html
+++ b/stats_for_applications/R/index.html
@@ -29,21 +29,14 @@
 <body>
 	<h1>Some Stats Notes</h1><p>
 	<a href=".">.</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4096&nbsp;03-Jan-2024&nbsp;15:16]&nbsp;&nbsp;<a href="./10_glm_files/">10_glm_files</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4096&nbsp;24-Jan-2024&nbsp;11:40]&nbsp;&nbsp;<a href="./2_inference_files/">2_inference_files</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4096&nbsp;24-Oct-2023&nbsp;00:31]&nbsp;&nbsp;<a href="./5_ht_files/">5_ht_files</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4096&nbsp;24-Oct-2023&nbsp;17:04]&nbsp;&nbsp;<a href="./6_gof_files/">6_gof_files</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4096&nbsp;07-Nov-2023&nbsp;00:36]&nbsp;&nbsp;<a href="./7_regression_files/">7_regression_files</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4096&nbsp;11-Nov-2023&nbsp;14:53]&nbsp;&nbsp;<a href="./8_bayes_files/">8_bayes_files</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4096&nbsp;24-Jan-2024&nbsp;11:34]&nbsp;&nbsp;<a href="./9_pca_files/">9_pca_files</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;43942&nbsp;03-Jan-2024&nbsp;15:16]&nbsp;&nbsp;<a href="./10_glm.html">10_glm.html</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;1095550&nbsp;26-Jan-2024&nbsp;20:30]&nbsp;&nbsp;<a href="./10b_glm_irls.html">10b_glm_irls.html</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;20985&nbsp;29-Nov-2023&nbsp;15:30]&nbsp;&nbsp;<a href="./2_inference.html">2_inference.html</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;40874&nbsp;24-Oct-2023&nbsp;00:31]&nbsp;&nbsp;<a href="./5_ht.html">5_ht.html</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;62872&nbsp;24-Oct-2023&nbsp;17:04]&nbsp;&nbsp;<a href="./6_gof.html">6_gof.html</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;1599021&nbsp;07-Nov-2023&nbsp;00:36]&nbsp;&nbsp;<a href="./7_regression.html">7_regression.html</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;45869&nbsp;11-Nov-2023&nbsp;14:53]&nbsp;&nbsp;<a href="./8_bayes.html">8_bayes.html</a><br>
-	└── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;32483&nbsp;24-Jan-2024&nbsp;11:34]&nbsp;&nbsp;<a href="./9_pca.html">9_pca.html</a><br>
+	├── [&nbsp;&nbsp;&nbsp;&nbsp;1160385&nbsp;26-Jan-2024&nbsp;21:15]&nbsp;&nbsp;<a href="./10_glm.html">10_glm.html</a><br>
+	├── [&nbsp;&nbsp;&nbsp;&nbsp;1278739&nbsp;06-Feb-2024&nbsp;22:24]&nbsp;&nbsp;<a href="./10b_glm_irls.html">10b_glm_irls.html</a><br>
+	├── [&nbsp;&nbsp;&nbsp;&nbsp;1038659&nbsp;26-Jan-2024&nbsp;20:45]&nbsp;&nbsp;<a href="./2_inference.html">2_inference.html</a><br>
+	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;901302&nbsp;26-Jan-2024&nbsp;20:45]&nbsp;&nbsp;<a href="./5_ht.html">5_ht.html</a><br>
+	├── [&nbsp;&nbsp;&nbsp;&nbsp;1472874&nbsp;26-Jan-2024&nbsp;20:47]&nbsp;&nbsp;<a href="./6_gof.html">6_gof.html</a><br>
+	├── [&nbsp;&nbsp;&nbsp;&nbsp;7079916&nbsp;31-Jan-2024&nbsp;16:53]&nbsp;&nbsp;<a href="./7_regression.html">7_regression.html</a><br>
+	├── [&nbsp;&nbsp;&nbsp;&nbsp;1544465&nbsp;26-Jan-2024&nbsp;21:01]&nbsp;&nbsp;<a href="./8_bayes.html">8_bayes.html</a><br>
+	└── [&nbsp;&nbsp;&nbsp;&nbsp;1156604&nbsp;26-Jan-2024&nbsp;21:10]&nbsp;&nbsp;<a href="./9_pca.html">9_pca.html</a><br>
 	<br><br>
 	</p>
 	<p>
