--- a/stats_for_applications/R/index.html
+++ b/stats_for_applications/R/index.html
@@ -30,8 +30,10 @@
 	<h1>Some Stats Notes</h1><p>
 	<a href=".">.</a><br>
 	├── [&nbsp;&nbsp;&nbsp;&nbsp;1160385&nbsp;26-Jan-2024&nbsp;21:15]&nbsp;&nbsp;<a href="./10_glm.html">10_glm.html</a><br>
-	├── [&nbsp;&nbsp;&nbsp;&nbsp;1278739&nbsp;06-Feb-2024&nbsp;22:24]&nbsp;&nbsp;<a href="./10b_glm_irls.html">10b_glm_irls.html</a><br>
+	├── [&nbsp;&nbsp;&nbsp;&nbsp;1333987&nbsp;07-Feb-2024&nbsp;17:16]&nbsp;&nbsp;<a href="./10b_glm_irls.html">10b_glm_irls.html</a><br>
 	├── [&nbsp;&nbsp;&nbsp;&nbsp;1038659&nbsp;26-Jan-2024&nbsp;20:45]&nbsp;&nbsp;<a href="./2_inference.html">2_inference.html</a><br>
+	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2466&nbsp;08-Oct-2023&nbsp;18:34]&nbsp;&nbsp;<a href="./3_mle.R">3_mle.R</a><br>
+	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;989&nbsp;08-Oct-2023&nbsp;17:47]&nbsp;&nbsp;<a href="./4_mom.R">4_mom.R</a><br>
 	├── [&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;901302&nbsp;26-Jan-2024&nbsp;20:45]&nbsp;&nbsp;<a href="./5_ht.html">5_ht.html</a><br>
 	├── [&nbsp;&nbsp;&nbsp;&nbsp;1472874&nbsp;26-Jan-2024&nbsp;20:47]&nbsp;&nbsp;<a href="./6_gof.html">6_gof.html</a><br>
 	├── [&nbsp;&nbsp;&nbsp;&nbsp;7079916&nbsp;31-Jan-2024&nbsp;16:53]&nbsp;&nbsp;<a href="./7_regression.html">7_regression.html</a><br>
